hw19-project/k8s-config/gateway-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: gateway
  type: ClusterIP
