hw19-project/k8s-config/gateway-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /oauth2/authorization/keycloak
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /login/oauth2/code/keycloak
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
